--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -18,7 +18,7 @@
          <children>
             <AnchorPane layoutX="322.0" layoutY="-1.0" prefHeight="746.0" prefWidth="1134.0" style="-fx-background-color: #F8EFBA;">
                <children>
-                  <AnchorPane layoutX="656.0" layoutY="81.0" prefHeight="241.0" prefWidth="451.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
+                  <AnchorPane layoutX="656.0" layoutY="81.0" prefHeight="257.0" prefWidth="451.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
                      <children>
                         <Label layoutX="76.0" layoutY="20.0" text="Code :  ">
                            <font>
@@ -58,7 +58,7 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="11.0" layoutY="85.0" prefHeight="233.0" prefWidth="460.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
+                  <AnchorPane layoutX="12.0" layoutY="63.0" prefHeight="274.0" prefWidth="460.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
                      <children>
                         <Label layoutX="38.0" layoutY="8.0" text="Order Id -:">
                            <font>
@@ -70,30 +70,56 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
+                        <Label layoutX="27.0" layoutY="232.0" text="Customer Mail-:">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblCustomerMail" layoutX="199.0" layoutY="226.0" prefHeight="35.0" prefWidth="221.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="33.0" layoutY="65.0" text="Order Date -:">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblOrderDate" layoutX="160.0" layoutY="61.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="38.0" layoutY="118.0" text="Customer Id -:">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <JFXComboBox fx:id="cmbCustomerId" layoutX="181.0" layoutY="120.0" onAction="#cmbCustomerIdOnAction" prefHeight="26.0" prefWidth="161.0" />
+                        <JFXButton buttonType="RAISED" layoutX="349.0" layoutY="124.0" onAction="#btnNewOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </JFXButton>
+                        <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="357.0" layoutY="133.0">
+                           <image>
+                              <Image url="@image/icons8-add-24.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="27.0" layoutY="178.0" text="Customer Name -:">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblCustomerName" layoutX="182.0" layoutY="174.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
                      </children></AnchorPane>
-                  <Label layoutX="41.0" layoutY="142.0" text="Order Date -:">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblOrderDate" layoutX="190.0" layoutY="138.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
-                     <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font></Label>
-                  <Label layoutX="37.0" layoutY="202.0" text="Customer Id -:">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="41.0" layoutY="258.0" text="Customer Name -:">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblCustomerName" layoutX="219.0" layoutY="254.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
-                     <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font></Label>
                   <TextField fx:id="txtqty" layoutX="521.0" layoutY="219.0" onAction="#txtQtyOnAction" prefHeight="35.0" prefWidth="63.0" style="-fx-background-radius: 40;">
                      <font>
                         <Font name="System Bold" size="13.0" />
@@ -138,25 +164,11 @@
                         <Image url="@image/icons8-create-order-30.png" />
                      </image>
                   </ImageView>
-                  <JFXComboBox fx:id="cmbCustomerId" layoutX="199.0" layoutY="190.0" onAction="#cmbCustomerIdOnAction" prefHeight="26.0" prefWidth="161.0" />
-                  <JFXButton buttonType="RAISED" layoutX="374.0" layoutY="193.0" onAction="#btnNewOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </JFXButton>
-                  <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="382.0" layoutY="202.0">
-                     <image>
-                        <Image url="@image/icons8-add-24.png" />
-                     </image>
-                  </ImageView>
                   <Label fx:id="lblNetTotal" layoutX="124.0" layoutY="705.0" prefHeight="26.0" prefWidth="118.0" textFill="#c23616">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font></Label>
-                  <TableView fx:id="tblPlaceOrder" layoutX="54.0" layoutY="344.0" prefHeight="342.0" prefWidth="1007.0">
+                  <TableView fx:id="tblPlaceOrder" layoutX="74.0" layoutY="386.0" prefHeight="300.0" prefWidth="1007.0">
                     <columns>
                       <TableColumn fx:id="colCode" prefWidth="123.199951171875" text="Code" />
                       <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
