--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -129,15 +129,12 @@
                   <Image url="@image/icons8-log-out-48.png" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="101.0" layoutY="14.0" prefHeight="57.0" prefWidth="55.0" style="-fx-background-color: #ffffff;">
-               <children>
-                  <ImageView layoutX="4.0" layoutY="4.0">
-                     <image>
-                        <Image url="@image/icons8-user-50%20(1).png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
+            <AnchorPane layoutX="116.0" layoutY="20.0" prefHeight="57.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" />
+            <ImageView layoutX="119.0" layoutY="24.0">
+               <image>
+                  <Image url="@image/icons8-user-50%20(1).png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Label layoutX="239.0" layoutY="15.0" prefHeight="18.0" prefWidth="129.0" text="   Welcome Back !!">
@@ -168,7 +165,7 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <BarChart fx:id="BarChart" layoutX="125.0" layoutY="98.0" prefHeight="473.0" prefWidth="734.0">
+            <BarChart fx:id="BarChart" layoutX="471.0" layoutY="122.0" prefHeight="473.0" prefWidth="734.0">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -191,6 +188,51 @@
                   <Image url="@image/icons8-time.gif" />
                </image>
             </ImageView>
+            <ImageView fitHeight="58.0" fitWidth="82.0" layoutX="26.0" layoutY="114.0">
+               <image>
+                  <Image url="@image/icons8-customer-50%20(1).png" />
+               </image>
+            </ImageView>
+            <Label layoutX="133.0" layoutY="129.0" prefHeight="35.0" prefWidth="246.0" text="Current Customers" textFill="#4a6b94">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="58.0" fitWidth="65.0" layoutX="35.0" layoutY="276.0">
+               <image>
+                  <Image url="@image/icons8-employee-64%20(1).png" />
+               </image>
+            </ImageView>
+            <Label layoutX="125.0" layoutY="287.0" prefHeight="35.0" prefWidth="222.0" text="Current Employees" textFill="#317908">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="43.0" fitWidth="55.0" layoutX="40.0" layoutY="463.0">
+               <image>
+                  <Image url="@image/icons8-supplier-48.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="125.0" layoutY="467.0" prefHeight="35.0" prefWidth="222.0" text="Current Suppliers" textFill="#823296">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblCustomerCount" layoutX="176.0" layoutY="183.0" prefHeight="58.0" prefWidth="120.0">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblEmployeeCount" layoutX="176.0" layoutY="344.0" prefHeight="58.0" prefWidth="120.0">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblSupplierCount" layoutX="176.0" layoutY="525.0" prefHeight="58.0" prefWidth="120.0">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1360.0" layoutY="14.0">
