--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -165,7 +165,7 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <BarChart fx:id="BarChart" layoutX="471.0" layoutY="122.0" prefHeight="473.0" prefWidth="734.0">
+            <BarChart fx:id="BarChart" layoutX="471.0" layoutY="122.0" prefHeight="473.0" prefWidth="734.0" stylesheets="@Css/style.css">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -188,11 +188,20 @@
                   <Image url="@image/icons8-time.gif" />
                </image>
             </ImageView>
-            <ImageView fitHeight="58.0" fitWidth="82.0" layoutX="26.0" layoutY="114.0">
-               <image>
-                  <Image url="@image/icons8-customer-50%20(1).png" />
-               </image>
-            </ImageView>
+            <AnchorPane layoutX="35.0" layoutY="78.0" prefHeight="187.0" prefWidth="370.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 40;">
+               <children>
+                  <ImageView fitHeight="58.0" fitWidth="82.0" layoutX="8.0" layoutY="42.0">
+                     <image>
+                        <Image url="@image/icons8-customer-50%20(1).png" />
+                     </image>
+                  </ImageView>
+                  <Label fx:id="lblCustomerCount" layoutX="148.0" layoutY="94.0" prefHeight="58.0" prefWidth="120.0">
+                     <font>
+                        <Font name="System Bold" size="48.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
             <Label layoutX="133.0" layoutY="129.0" prefHeight="35.0" prefWidth="246.0" text="Current Customers" textFill="#4a6b94">
                <font>
                   <Font name="System Bold" size="24.0" />
@@ -216,11 +225,6 @@
             <Label layoutX="125.0" layoutY="467.0" prefHeight="35.0" prefWidth="222.0" text="Current Suppliers" textFill="#823296">
                <font>
                   <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblCustomerCount" layoutX="176.0" layoutY="183.0" prefHeight="58.0" prefWidth="120.0">
-               <font>
-                  <Font name="System Bold" size="48.0" />
                </font>
             </Label>
             <Label fx:id="lblEmployeeCount" layoutX="176.0" layoutY="344.0" prefHeight="58.0" prefWidth="120.0">
